--- a/templates/enable_ssl.ldif.erb
+++ b/templates/enable_ssl.ldif.erb
@@ -1,7 +1,7 @@
 dn: cn=encryption,cn=config
 changetype: modify
 replace: nsSSL3
-nsSSL3: on
+nsSSL3: <%= @ssl3 -%>
 -
 replace: nsSSLClientAuth
 nsSSLClientAuth: allowed
